# robot-dog

./: main.code-workspace  readme.md
backend/: .gitignore  CMakeLists.txt  Makefile
backend/app/: main.cc
backend/app/events/: event.cc  event.h  event_bus.cc  event_bus.h  event_bus_consumer.cc  event_bus_consumer.h
backend/app/gui/: point_cloud_renderer.cc  point_cloud_renderer.h  window.cc  window.h
backend/app/kinematics/: leg.cc  leg.h
backend/app/slam/: process.cc  process.h
backend/app/slam/point_cloud/: registrator.cc  registrator.h
backend/app/slam/scanning/: events.cc  events.h  lidar.cc  lidar.h
backend/app/tools/: round.h
frontend/: package-lock.json  package.json
